Update box search Google map

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,12 @@
     <title>Localtion List | Nguyen Thai Hoai Nam</title>
     <link href="css/mui.min.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="screen" />
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=visualization&key=AIzaSyDxmupN89WXa2n8ERyYv2awB9hph2BniaM">
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=visualization&libraries=places&key=AIzaSyDxmupN89WXa2n8ERyYv2awB9hph2BniaM"></script>
 </head>
 <body>
 
-    <div id="root">
+    <div id="root"></div>
 
-    </div>
     <script src="js/bundle.js"></script>
 </body>
 </html>
